# nba-fantasy

./: Cargo.toml  README.md
.github/workflows/: DummyFail.yml  OutputStateTest.yml  conditional-set.yml  deploy-cors-anywhere.yml  deploy-github-page.yml  echo-branch.yml  echo-env.yml  page-deployment.yml  use-local-wf.yml
.github/workflows/Test/: DummyFail.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: debug.rs  lambda.rs  main.rs  mvc.rs
backend/src/api/: token.rs
frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml
frontend/src/: components.rs  main.rs  model.rs  proxy.rs
frontend/src/components/: app.rs  functional.rs  login.rs  video_details.rs  videos_list.rs  view.rs
frontend/src/model/: standings_response.rs  video.rs
infrastructure/: .gitignore
infrastructure/dev/: .terraform.lock.hcl  curl.sh  frontend.tf  locals.tf  main.tf  ngrok.sh  ngrok.tf  outputs.tf  read_env.tf
infrastructure/envs/: config.tfvars.dist  terraform.sh
infrastructure/envs/dev/: .terraform.lock.hcl  developer-yahoo.variables.tf  main.tf  outputs.tf  providers.tf  variables.developer-yahoo.tf  variables.tf
infrastructure/envs/prod/: .terraform.lock.hcl  github.set_secrets.tf  main.tf  providers.tf  terraform-cloud.tf  variables.tf
infrastructure/envs/prod/github/: environment.set_variables.tf  environment.tf  repository.tf  set_secrets.tf  set_variables.tf  variables.tf
infrastructure/modules/backend/: aws_lambda.tf  build.tf  locals.tf  outputs.tf  variables.tf
infrastructure/modules/cloudflare/: main.tf  providers.tf  variables.tf
infrastructure/modules/cors-wrapper/: ecr.tf  ecs.tf  iam.tf  local.tf  main.tf  outputs.tf  variables.tf
infrastructure/modules/cors-wrapper/aws/: aws_lambda.tf  main.tf  variables.tf
infrastructure/modules/cors-wrapper/aws_lambda_wrapper/: npm_install.sh
infrastructure/modules/developer-yahoo/: main.sh  main.tf  outputs.tf  variables.tf
infrastructure/modules/env/: delete_dotenv.sh  outputs.tf
infrastructure/modules/env.read_dotenv/: outputs.tf
infrastructure/modules/env.set_dotenv/: main.tf  variables.tf
infrastructure/modules/env/get_aws_lambda_function_name/: outputs.tf  variables.tf
infrastructure/modules/env/read_dotenv/: main.tf  outputs.tf
infrastructure/modules/env/set_dotenv/: main.tf  variables.tf
infrastructure/modules/frontend/: frontend.tf  main.tf  trunk-serve.sh  variables.tf
infrastructure/modules/https-tunnel/: ngrok.sh  ngrok.tf  outputs.tf
infrastructure/modules/https-tunnel/get-active-tunnel/: main.sh  main.tf  outputs.tf
infrastructure/modules/run-sh/: main.sh  main.tf  outputs.tf  variables.tf
src/: components.rs  main.rs
src/components/: app.rs  login.rs  mod.rs  videos_list.rs
yahoo-fantasy-sports-api/: Cargo.toml
yahoo-fantasy-sports-api/src/: lib.rs  models.rs
yahoo-fantasy-sports-api/src/models/: standings.rs
