[package]
edition = "2021"
exclude = ["debug.rs"]
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derive_more = "^0"
dotenv_codegen = "0.15.0"
env_logger = "0.8"
log = "^0.4"
oauth2 = "4.2"
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"

## it's either debug(mvc) or release(AWS Lambda) ##

# release dependencies
aws-config = "0.51.0"
lambda_http = "0.7"
tokio = {version = "1.22.0", features = ["macros"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt"]}

# debug dependencies
actix-cors = {version = "0.6.4", optional = true}
actix-files = {version = "0.6", optional = true}
actix-web = {version = "^4", features = ["openssl"], optional = true}
actix-web-lab = {version = "0.16.1", optional = true}
openssl = {version = "0.10", optional = true}

[features]
debug = [
  "dep:actix-cors",
  "dep:actix-files",
  "dep:actix-web",
  "dep:actix-web-lab",
  "dep:openssl",
]
