[package]
edition = "2021"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
gloo-net = "0.4.0"
log = "0.4.17"
reqwest = "0.11.12"
serde = "1.0.147"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yahoo-fantasy-sports-api = {path = "../yahoo-fantasy-sports-api"}
yew = "0.19.3"
yew-oauth2 = "0.4.0"
yew-router = {version = "0.16", package = "yew-router-nested"}
