[package]
edition = "2021"
name = "yahoo-fantasy-sports-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.30.0", features = ["serialize"]}
serde = {version = "1.0.188", features = ["derive"]}
